<resources>
    <string name="http_error">网络异常！</string>
    <string name="token_error">登录失效,请重新登录!</string>
    <string name="unKnown_error">未知错误！</string>
    <string name="socket_time_out_error">网络连接超时，请检查输入的服务器URL是否正确!</string>
    <string name="url_error">请检查输入的服务器URL是否正确!</string>
    <string name="not_result_error">未获取到数据！</string>
    <string name="empty_page_text">没有数据</string>
    <string name="original_title">标题</string>
    <string name="confirm">确定</string>
    <string name="assets_title">请输入工具名称，工具编号</string>
    <string name="staff_title">请输入员工编号，员工名称</string>
    <string name="screen_str">筛选</string>
    <string name="assets_name">工具名称</string>
    <string name="assets_id">工具编号</string>
    <string name="tool_type">工具分类</string>
    <string name="mode_type">规格型号</string>
    <string name="login">登录</string>
    <string name="login_hint">账号</string>
    <string name="user_passward">密码</string>
    <string name="name_str">姓名</string>
    <string name="user_code">员工编号:</string>
    <string name="device_name">设备名称:</string>
    <string name="ast_loc">存放位置</string>
    <string name="user_depa">所属部门:</string>
    <string name="open_door_str">门已打开</string>
    <string name="open_door_toast">门已打开!您可以对工具进行维护! \n维护完成后，请记得关门哦!</string>
    <string name="maintenance_str">维护结果</string>
    <string name="maintenance_result">您本次放入%1$d个工具，移出%2$d个工具</string>
    <string name="wrong_back_result">有%1$d个工具放置错误\n请打开门，请重新放入!</string>
    <string name="close_door_alert">提示</string>
    <string name="go_home">前往首页</string>
    <string name="auto_return">自动返回(%1$ds)</string>
    <string name="auto_default_return">自动返回(10s)</string>
    <string name="close_succ">柜门关闭成功!</string>
    <string name="wrong_account_password">账号或密码不正确</string>
    <string name="wrong_username">用户不能识别</string>
    <string name="wrong_parameter">请求参数异常</string>
    <string name="change_face_login">切换人脸登录</string>
    <string name="login_out_str">返回上一级会退出本次登录，是否继续？</string>
    <string name="no_str">否</string>
    <string name="yes_str">是</string>
    <string name="face_auth">认证</string>
    <string name="user_name">使用人</string>
    <string name="close_loading_str">关门盘点中.....</string>
</resources>
