<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_4"
    android:background="@color/white"
    android:padding="@dimen/dp_15">

    <TextView
        android:id="@+id/tv_ast_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/assets_name"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/ast_real_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_toEndOf="@+id/tv_ast_name"
        android:textColor="@color/home_number"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/ast_status"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_17"
        android:background="@color/ast_free"
        android:paddingStart="@dimen/dp_3"
        android:paddingEnd="@dimen/dp_3"
        android:gravity="center"
        android:layout_marginStart="@dimen/dp_28"
        android:text="状态"
        android:layout_toEndOf="@+id/ast_real_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_11" />

    <TextView
        android:id="@+id/tv_num_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ast_name"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/assets_id"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_asset_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ast_name"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_toEndOf="@+id/tv_num_name"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_num_name"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/tool_type"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_num_name"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_toEndOf="@+id/tv_num_name"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_ast_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user"
        android:text="@string/mode_type"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_ast_loc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_toEndOf="@+id/tv_num_name"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13"  />


</RelativeLayout>