<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_12"
    android:layout_marginEnd="@dimen/dp_12"
    android:layout_marginBottom="@dimen/dp_10"
    android:gravity="center"
    android:background="@drawable/ast_item_back"
    android:padding="@dimen/dp_15">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name_str"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_code_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/user_code"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_code_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_weight="1"
        android:text="30179"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_dep_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/user_depa"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_dep_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_weight="1"
        android:text="财务部"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13" />

    <Button
        android:id="@+id/bt_input_face"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_22"
        android:layout_weight="1"
        android:background="@drawable/free_status_back"
        android:gravity="center"
        android:textSize="@dimen/sp_13"
        android:text="录入人脸"
        android:textColor="@color/white" />


</LinearLayout>