<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:background="@drawable/manager_login_back"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_142"
            android:layout_marginTop="@dimen/dp_53"
            android:text="学号登录"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>

    <ImageView
        android:id="@+id/title_back"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_12"
        android:src="@drawable/left_arrow" />

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_head"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_26"
        android:background="@drawable/bg_search"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@null"
            android:drawablePadding="9.5dp"
            android:hint="@string/login_hint"
            android:inputType="textNoSuggestions"
            android:paddingStart="@dimen/dp_20"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/dp_26"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_26"
        android:background="@drawable/bg_search"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_48"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="9.5dp"
                android:hint="@string/user_passward"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_20"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/password_invisible"
                android:layout_width="@dimen/dp_34"
                android:layout_height="@dimen/dp_34"
                android:padding="@dimen/dp_10"
                android:src="@drawable/psd_invisible" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_change_card"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_34"
        android:layout_below="@+id/password_layout"
        android:layout_alignStart="@+id/password_layout"
        android:layout_marginTop="@dimen/dp_26"
        android:background="@drawable/login_bt_shape"
        android:text="@string/change_face_login"
        android:textSize="@dimen/sp_12" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_34"
        android:layout_below="@+id/password_layout"
        android:layout_alignTop="@+id/bt_change_card"
        android:layout_alignEnd="@+id/password_layout"
        android:background="@drawable/login_bt_shape"
        android:text="@string/login"
        android:textSize="@dimen/sp_12" />
</RelativeLayout>