<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_10"
    android:layout_marginStart="@dimen/dp_12"
    android:layout_marginEnd="@dimen/dp_12"
    android:background="@drawable/ast_item_back"
    android:padding="@dimen/dp_15">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/name_str"
        android:textStyle="bold"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_code_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/user_code"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_code_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_user_name"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_toEndOf="@+id/tv_code_name"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_dep_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_code_name"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/user_depa"
        android:textColor="@color/home_text_two"
        android:textSize="@dimen/sp_13" />

    <TextView
        android:id="@+id/tv_dep_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_code_name"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_toEndOf="@+id/tv_dep_title"
        android:textColor="@color/setting_text_one"
        android:textSize="@dimen/sp_13" />

    <Button
        android:id="@+id/bt_input_face"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_alignParentEnd="true"
        android:background="@drawable/free_status_back"
        android:text="录入人脸"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bt_input_code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_below="@+id/bt_input_face"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/inuse_status_back"
        android:text="录入工卡"
        android:textColor="@color/white" />

</RelativeLayout>